new proj/src/objects/GE_PRM_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>GE_PRM_ITP_Profile_Owner__c</fullName>
        <description>ITP Profile Owner</description>
        <inlineHelpText>ITP Profile Owner</inlineHelpText>
        <label>ITP Profile Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_ITP_Type__c</fullName>
        <description>ITP Type</description>
        <inlineHelpText>ITP Type</inlineHelpText>
        <label>ITP Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Identify_Compliance_Concerns__c</fullName>
        <description>Do you have a company wide policy and program for your employees to identify compliance concerns?</description>
        <inlineHelpText>Do you have a company wide policy and program for your employees to identify compliance concerns?</inlineHelpText>
        <label>Identify Compliance Concerns</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Identify_Government_Agencies__c</fullName>
        <description>Government agencies for which company is registered to do business (or indicate N/A). Provide translated incorporation or registration documents within the Attachments section of the form.</description>
        <inlineHelpText>Government agencies for which company is registered to do business (or indicate N/A). Provide translated incorporation or registration documents within the Attachments section of the form.</inlineHelpText>
        <label>Government Agencies Registered (or N/A)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Identity_Page__c</fullName>
        <label>Identity Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Identity_Section_Cmplt_flag__c</fullName>
        <description>Flag to check if the Identity Section is Completed or not.</description>
        <formula>IF(
OR(
ISBLANK(GE_PRM_Applicant_Name__c),
ISBLANK(GE_PRM_Date_Business_Entity_Founded__c),
ISPICKVAL(GE_PRM_Country_of_company_founded__c,&apos;&apos;)
),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Int_Bank_Account_Number_IBAN__c</fullName>
        <description>International Bank Account Number (IBAN)</description>
        <inlineHelpText>International Bank Account Number (IBAN)</inlineHelpText>
        <label>International Bank Account Number (IBAN)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Integretiy_Issue_in_Company_Yes__c</fullName>
        <description>If yes, please explain non-disclosed issues.</description>
        <inlineHelpText>If &quot;Yes&quot;, please explain non-disclosed issues.</inlineHelpText>
        <label>Integretiy Issue in Company - Yes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Integretiy_Issue_in_Company__c</fullName>
        <description>Has anyone in your company reported any concerns or violation of integrity issues that have not been disclosed to GE?</description>
        <inlineHelpText>Has anyone in your company reported any concerns or violation of integrity issues that have not been disclosed to GE?</inlineHelpText>
        <label>Integretiy Issue in Company</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC_Actns__c</fullName>
        <label>Subsidiaries/Affiliations</label>
        <picklist>
            <picklistValues>
                <fullName>Due Diligence Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Information Provided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC_Approved_Rejected_Date__c</fullName>
        <label>High Risk Approved/Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC_Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC_Task_Created_Date__c</fullName>
        <label>KYC Task Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Key_ITP_Competitors__c</fullName>
        <description>Who are the key competitors for this ITP in this market?</description>
        <inlineHelpText>Who are the key competitors for this ITP in this market?</inlineHelpText>
        <label>Key ITP Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Launch_Application__c</fullName>
        <formula>IF( CONTAINS($Api.Enterprise_Server_URL_260,&quot;communities&quot;),IF( ISBLANK(GE_PRM_Recommendation__c) ,HYPERLINK(&quot;/channelpartner/apex/GE_PRM_introduction_Page?Id=&quot;+Id, IMAGE(&apos;/channelpartner/resource/1301293480000/PRM_Launch_Application&apos;, &quot;Click to Launch Application&quot;),&quot;_parent&quot;),HYPERLINK(&quot;/channelpartner/&quot;+Id+&quot;/e&quot;, IMAGE(&apos;/channelpartner/resource/1301293480000/PRM_Launch_Application&apos;, &quot;Click to Launch Application&quot;),&quot;_parent&quot;)),
IF( ISBLANK(GE_PRM_Recommendation__c) ,HYPERLINK(&quot;/apex/GE_PRM_introduction_Page?Id=&quot;+Id, IMAGE(&apos;/resource/1301293480000/PRM_Launch_Application&apos;, &quot;Click to Launch Application&quot;),&quot;_parent&quot;), HYPERLINK(&quot;/&quot;+Id+&quot;/e&quot;, IMAGE(&apos;/resource/1301293480000/PRM_Launch_Application&apos;, &quot;Click to Launch Application&quot;),&quot;_parent&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Leadership_Status__c</fullName>
        <label>Leadership Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_State_Province__c</fullName>
        <description>State/Province</description>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Structure_New__c</fullName>
        <description>Legal Structure</description>
        <inlineHelpText>Legal Structure</inlineHelpText>
        <label>Legal Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicly Held Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privately Held Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Structure_Other__c</fullName>
        <description>Other Legal Structure</description>
        <inlineHelpText>Other Legal Structure</inlineHelpText>
        <label>Other Legal Structure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Structure__c</fullName>
        <description>Legal Structure</description>
        <inlineHelpText>Legal Structure</inlineHelpText>
        <label>Legal Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Main_Office_Page__c</fullName>
        <label>Main Office Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market_GE_Prod_Govt_under_Agree__c</fullName>
        <description>Does the channel partner engage or plan to engage in any activity (selling, representing or servicing) GE Products to any government or government-controlled entity?</description>
        <inlineHelpText>Does the channel partner engage or plan to engage in any activity (selling, representing or servicing) GE Products to any government or government-controlled entity?</inlineHelpText>
        <label>Market GE Prod to Govt under Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market_GE_Prod_to_Govt_Agree_Yes__c</fullName>
        <description>If Yes, Identify those government or government-controlled entities</description>
        <inlineHelpText>If Yes, Identify those government or government-controlled entities</inlineHelpText>
        <label>Market GE Prod to Govt Agreement-Yes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Marketing_Page__c</fullName>
        <label>Marketing Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Markets_Served__c</fullName>
        <description>Markets Served (i.e. Data Comm, Healthcare, Comm. Construction….)</description>
        <inlineHelpText>Markets Served (i.e. Data Comm, Healthcare, Comm. Construction….)</inlineHelpText>
        <label>Markets Served</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Edit_AFA__c</fullName>
        <formula>IF(AND(NOT(ISPICKVAL(GE_PRM_Status__c,&apos;Approved&apos;)),NOT(ISPICKVAL(GE_PRM_Status__c,&apos;Archived&apos;))),IF( CONTAINS($Api.Enterprise_Server_URL_260,&quot;communities&quot;), HYPERLINK(&quot;/channelpartner/&quot;+Id+&quot;/e?retURL=%2F&quot;+Id+&quot;&amp;RecordType=012K00000000de1&quot;, IMAGE(&apos;/resource/1393276881000/Edit_AFA&apos;,&quot;Click to Edit&quot;),&quot;_parent&quot;),HYPERLINK(&quot;/&quot;+Id+&quot;/e?retURL=%2F&quot;+Id+&quot;&amp;RecordType=012K00000000de1&quot;, IMAGE(&apos;/resource/1389644712000/Edit_AFA&apos;,&quot;Click to Edit&quot;),&quot;_parent&quot;)),IMAGE(&apos;/resource/1393276881000/Edit_AFA&apos;,&quot;Master Edit Feezed&quot;))</formula>
        <label>&lt;font color=&quot;white&quot;&gt;fas&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Military_Branch_of_any_Gov__c</fullName>
        <description>Does the channel partner intend to sell any GE products to the military branch of any government?</description>
        <inlineHelpText>Does the channel partner intend to sell any GE products to the military branch of any government?</inlineHelpText>
        <label>Military Branch of any Government</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Military_Branch_of_any_Govt_Yes__c</fullName>
        <description>If YES, identify those Military or Governmental agencies involved below</description>
        <inlineHelpText>If YES, identify those Military or Governmental agencies involved below</inlineHelpText>
        <label>Military Branch of any Government -Yes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Mobile__c</fullName>
        <description>Applicant Mobile phone</description>
        <inlineHelpText>Mobile Phone #</inlineHelpText>
        <label>Applicant Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_National_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appointment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Need_Info_Appointment_Approvals__c</fullName>
        <label>Need Info Appointment Approvals</label>
        <summaryFilterItems>
            <field>GE_PRM_Appointment_Approval__c.GE_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Need More Info, Additional Information Provided</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_PRM_Appointment_Approval__c.GE_PRM_Appointment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_No_Identify_Compliance_Concerns__c</fullName>
        <description>If &quot;Yes&quot;, please explain compliance policy.</description>
        <inlineHelpText>If &quot;Yes&quot;, please explain compliance policy.</inlineHelpText>
        <label>No Identify Compliance Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_No_Of_Employees__c</fullName>
        <description>Total number of employees for all company locations, divisions, etc.</description>
        <inlineHelpText>Total number of employees for all company locations, divisions, etc.</inlineHelpText>
        <label>No of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Notice__c</fullName>
        <defaultValue>&quot;Please note that the submission of an application by the Applicant does not create or form any sort of relationship or arrangement between the Applicant and General Electric Company or any of its subsidiaries or affiliates.  The application will be processed and considered by General Electric Company or any of its subsidiaries or affiliates and the Applicant will be informed of the outcome of the application accordingly.  Prior to the official approval of the appointment and execution of the agreement between General Electric Company or any of its subsidiaries or affiliates and the Applicant, the Applicant agrees that the Applicant is not authorized in any manner whatsoever to represent or act on behalf of General Electric Company or any of its subsidiaries or affiliates and it shall not be entitled to any payment whatsoever.  The costs for assistance, if any, provided by the Applicant to obtain visas for employees of General Electric Company or any of its subsidiaries or affiliates will be reimbursed on an actual basis.&quot;+&quot;\n\nBy agreeing to this application, the Applicant agrees that, unless a mutually satisfactory agreement is executed by Applicant and General Electric Company or any of its subsidiaries or affiliates, no obligation or liability either contractual, extracontractual or otherwise of any nature whatsoever shall arise as between the parties.&quot;</defaultValue>
        <label>Notice</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Office_Locations_Page__c</fullName>
        <label>Office Locations Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_One_or_More_Accounting_firms__c</fullName>
        <description>Does the company use one or more accounting firms?</description>
        <inlineHelpText>Does the company use one or more accounting firms?</inlineHelpText>
        <label>One or More Accounting firms</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Address_1__c</fullName>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Address_2__c</fullName>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_City__c</fullName>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Country__c</fullName>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Email__c</fullName>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Fax__c</fullName>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Phone__c</fullName>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Postal_Code__c</fullName>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_State_Province__c</fullName>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Original_Source_System__c</fullName>
        <label>Original Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Owner_Officer_work_in_other_Org_Q__c</fullName>
        <description>Have any of the above-named owners/officers/directors worked for any organization other than the company?</description>
        <inlineHelpText>Have any of the above-named owners/officers/directors worked for any organization other than the company?</inlineHelpText>
        <label>Owners, Officers work in other Org Ques</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Owners_Officers_Work_In_Other_Org__c</fullName>
        <description>If &quot;Yes&quot;, list other organizations and their position(s) held below.</description>
        <inlineHelpText>If &quot;Yes&quot;, list other organizations and their position(s) held below.</inlineHelpText>
        <label>Owners, Officers work in other Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_PRM_KYC_Actions_flag__c</fullName>
        <formula>IF(GE_PRM_Agreement_Type__c=&apos;New Product Line/Service&apos;, &apos;&apos;,
IF(ISPICKVAL(GE_PRM_AFA_Type__c,&apos;Fast Track&apos;),
IF(AND( ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;Approved&apos;),
AND(
OR( ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;Due Diligence Accepted&apos;),
ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;Due Diligence Rejected&apos;),
ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;&apos;)),
OR(ISPICKVAL(GE_PRM_Branch_Location__c,&apos;Due Diligence Accepted&apos;),
ISPICKVAL(GE_PRM_Branch_Location__c,&apos;Due Diligence Rejected&apos;),
ISPICKVAL(GE_PRM_Branch_Location__c,&apos;&apos;)),
OR(ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;Due Diligence Accepted&apos;),
ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;Due Diligence Rejected&apos;),
ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;&apos;)),
OR(ISPICKVAL(GE_PRM_High_Risk__c,&apos;Due Diligence Accepted&apos;),
ISPICKVAL(GE_PRM_High_Risk__c,&apos;Due Diligence Rejected&apos;),
ISPICKVAL(GE_PRM_High_Risk__c,&apos;&apos;)),
GE_PRM_Due_Deligence__c=TRUE)),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25)
),
IF(AND( OR(ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;Approved&apos;),ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;&apos;),ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;Need More Information&apos;),ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;Additional Information Provided&apos;),ISPICKVAL(GE_PRM_Chnl_Mgr_Actns__c,&apos;Pending&apos;)),ISPICKVAL(GE_PRM_AFA_Type__c,&apos;Express&apos;),
OR(
OR(ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;Pending&apos;),
ISPICKVAL(GE_PRM_KYC_Actns__c,&apos;Need More Information&apos;)),
OR(ISPICKVAL(GE_PRM_Branch_Location__c,&apos;Pending&apos;),
ISPICKVAL(GE_PRM_Branch_Location__c,&apos;Need More Information&apos;)),
OR(ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;Pending&apos;),
ISPICKVAL(GE_PRM_Sub_Dealers__c,&apos;Need More Information&apos;))
)),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsOrange&quot;, &quot;Orange&quot;, 25,25),
IMAGE(&quot;/resource/1315699578000/RiskTopicSignalsGreen&quot;, &quot;Green&quot;, 25,25)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Appointment</label>
        <referenceTo>GE_PRM_Appointment__c</referenceTo>
        <relationshipLabel>Appointment</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Partner_Comments__c</fullName>
        <description>If the partner needs to change any of the address details he need to update this field so that the notification goes to Channel Manager</description>
        <inlineHelpText>Identity Changes Requested</inlineHelpText>
        <label>If not Correct, Enter Changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pending_Appointment_Approvals__c</fullName>
        <label>Pending Appointment Approvals</label>
        <summaryFilterItems>
            <field>GE_PRM_Appointment_Approval__c.GE_PRM_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_PRM_Appointment_Approval__c.GE_PRM_Appointment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Position_of_Influence_Yes__c</fullName>
        <description>If &quot;Yes&quot;, list name, GE customer organization &amp; position held below</description>
        <inlineHelpText>If &quot;Yes&quot;, list name, GE customer organization &amp; position held below</inlineHelpText>
        <label>Position of Influence - Yes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>